# cicd_test2

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: si.yml
